# taskrambler

./: .doxygen  .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.am.coverage  NEWS  README  README.md  TODO  bootstrap  configure.ac  signuptest.html
assets/doc/: 304_8c__incl.md5  304_8c_aba6316bd46f4f785b21855689f7fcb41_cgraph.md5  304_8c_aba6316bd46f4f785b21855689f7fcb41_icgraph.md5  403_8c__incl.md5  403_8c_a10bdf15320dd802fed606cadf5f3cc2c_icgraph.map  403_8c_a10bdf15320dd802fed606cadf5f3cc2c_icgraph.md5  404_8c__incl.md5  accept_8c__incl.md5  accept_8c_a45ec8fbdb035314da3d390fdcd6dc304_icgraph.map  add__common__header_8c__incl.md5  add__common__header_8c_add957dad05e83999f82233f85b1ca535_cgraph.map  add__common__header_8c_add957dad05e83999f82233f85b1ca535_icgraph.map  add__common__header_8c_add957dad05e83999f82233f85b1ca535_icgraph.md5  addr__index_8c__incl.md5  addr__index_8c_afea7754e8d68ccc6b7e21dc74d7c7226_cgraph.map  addr__index_8c_afea7754e8d68ccc6b7e21dc74d7c7226_cgraph.md5  addr__index_8c_afea7754e8d68ccc6b7e21dc74d7c7226_icgraph.map  addr__index_8c_afea7754e8d68ccc6b7e21dc74d7c7226_icgraph.md5  answer_8c__incl.md5  answer_8c_add3fe105c4e782e5b1387cb596792bbe_cgraph.map  asset_8c__incl.md5  auth_2auth_8h__incl.md5  (+419 more)
certs/: server.crt  server.key
config/: Makefile.am  mime.types  openssl.cnf  taskrambler.conf.in
docs/: Doxyfile.in  Makefile.am  doxygen-1.8.4-r9999.ebuild  doxygen-1.8.4-taskrambler.patch  idea_for_asset_access.md  rbdelete.txt  rbinsert.txt  socket_states.txt  taskrambler-0.1.7.ebuild  taskrambler-0.1.8.ebuild
include/: asset.h  auth.h  cbuf.h  cbufpool.h  class.h  commons.h  credential.h  hash.h  http.h  interface.h  logger.h  permission.h  queue.h  role.h  router.h  server.h  session.h  socket.h  storage.h  stream.h  tree.h  user.h  uuid.h
m4/: dragonegg.m4  gcov.m4  memopt.m4  trlibs.m4
src/: Makefile.am  binarytree.c  cbuf.c  cbufpool.c  configtest.c  credential.c  hash.c  hash_value.c  interface.c  logger.c  mmapfiletest.c  mmapfiletest2.c  rbtree.c  rbtree2.c  server.c  session.c  socket.c  stream.c  taskrambler.c  testconfig.cfg  usertest.c  webgameserver.c
src/application/: Makefile.am  application.c  create_user.c  get_user.c  login.c  logout.c  session_cleanup.c  session_get.c  session_start.c  session_stop.c  session_update.c  signup.c  update_password.c  update_user.c
src/application/adapter/http/: http.c  update.c
src/application/controller/: _get_credential_from_args.c  _get_user_from_args.c  _process_user_create_args.c  _update_user_from_args.c  _validate_email.c  _validate_password.c  _validate_password_repeat.c
src/application/controller/authenticate/: create.c  delete.c
src/application/controller/currentuser/: read.c
src/application/controller/loc/: read.c
src/application/controller/randval/: read.c
src/application/controller/sessinfo/: read.c
src/application/controller/signup/: create.c
src/application/controller/user/: create.c  read.c  update.c
src/application/controller/version/: read.c
src/asset/: Makefile.am  asset.c  pool.c
src/auth/: Makefile.am  auth.c  create.c  credential.c  ldap.c
src/auth/interface/: auth.c
src/auth/storage/: hash_pw.c  signup.c  storage.c
src/cbuf/: Makefile.am  addr_index.c  cbuf.c  empty.c  get_data.c  get_free.c  get_line.c  get_read.c  get_write.c  inc_read.c  inc_write.c  is_empty.c  is_locked.c  lock.c  memchr.c  read.c  release.c  set_data.c  skip_non_alpha.c  write.c
src/class/: Makefile.am  interface.c
src/class/interface/: class.c  i_class.c
src/config/: Makefile.am  config.c  get.c  value.c
src/hash/: Makefile.am  add.c  cleanup.c  delete.c  each.c  get.c  get_first.c  hash.c  value.c
src/hash/interface/: hashable.c
src/http/: Makefile.am  cookie.c  header.c  message.c  parser.c  request.c  response.c  worker.c  writer.c
src/http/header/: add.c  get.c  to_string.c
src/http/interface/: i_http_intro.c
src/http/message/: get_version.c  has_keep_alive.c  has_valid_version.c  header_size_get.c  header_to_string.c  queue.c
src/http/message/queue/: get.c  put.c
src/http/parser/: body.c  header.c  new_message.c  p_body.c  p_header.c  p_post_vars.c  p_request_vars.c  parse.c  post_vars.c  request_vars.c
src/http/request/: get_method_id.c  has_valid_method.c
src/http/response/: 304.c  403.c  404.c  500.c  asset.c  json.c  login_form.c  me.c  randval.c  session.c  user.c  version.c
src/http/worker/: add_common_header.c  add_computed_header.c  answer.c  get_asset.c  get_mime_type.c  process.c  write.c
src/http/writer/: write.c
src/interface/: auth.c  class.c  hashable.c  http_intro.c  indexable.c  logger.c  observer.c  serializable.c  stream_reader.c  stream_writer.c  subject.c
src/logger/: Makefile.am  logger.c  stderr.c  syslog.c
src/logger/interface/: i_logger.c
src/queue/: Makefile.am  get.c  put.c  queue.c
src/router/: Makefile.am  route.c  router.c
src/server/: Makefile.am  close_conn.c  handle_accept.c  poll.c  read.c  run.c  server.c  write.c
src/session/: Makefile.am  add.c  delete.c  get.c  session.c
src/socket/: Makefile.am  accept.c  connect.c  listen.c  nonblock.c  socket.c
src/storage/: Makefile.am  delete.c  get.c  put.c  storage.c  update.c
src/stream/: Makefile.am  read.c  stream.c  write.c
src/stream/interface/: reader.c  writer.c
src/testers/: classvars.c  classvars.h  hash.c  rbtree2.c  usertest.c  uuid.c
src/tree/: Makefile.am  delete.c  destroy.c  find.c  inOrderSuccessor.c  insert.c  rotateLeft.c  rotateRight.c  tree.c  walk.c
src/user/: Makefile.am  load.c  save.c  user.c
src/utils/: daemonize.c  hash.c  http.c  memory.c  mime_type.c  signalHandling.c
src/uuid/: Makefile.am  _format3or5.c  compare.c  parse.c  unparse.c  uuid.c  version1.c  version3.c  version5.c
tests/: Makefile.am  cclassTest.c  classTest.c  loggerTest  loggerTest.c  runtest.c  runtest.h  serverTest.c  socketTest.c
tests/mock/: class.c  class.h  mock_class.c  mock_class.h  mock_logger.c  mock_logger.h  mock_worker.c  mock_worker.h
tests/stream/: Makefile
tests/suppress/: external.supp
(+749 files in other folders)
